Design home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,57 @@
-<p>home works!</p>
+
+<div>
+  <!--  main part 1-->
+
+  <div class=" flex flex-col sm:flex-row items-center    sm:flex sm:justify-between  mt-20 ">
+<!--    part1-->
+    <div class=" hidden sm:block relative sm:h-32 sm:w-32 sm:mt-16 ">
+      <img src="assets/images/Ellipse%205.svg" class="absolute   -left-12 -top-2" alt="">
+      <img src="assets/images/Ellipse%205.svg" class="absolute   -left-8 top-4" alt="">
+      <img src="assets/images/Ellipse%205.svg" class="absolute   -left-4 top-12" alt="">
+    </div>
+    <!--    part2-->
+
+    <div class="flex flex-col items-center justify-center mt-6 ">
+      <p class="text-6xl font-bold">ORIGINALITY</p>
+      <p class="text-6xl font-bold">YOU  WEAR</p>
+      <p class="text-6xl font-bold">EVERYDAY</p>
+    </div>
+    <!--    part3-->
+
+    <div class="w-48 h-48 relative rounded-full border-2 border-black mr-8 mt-12">
+      <img src="assets/images/teshirty.png" alt=""  class="w-32 h-32 left-8 top-2 absolute">
+      <div class="w-32 h-32 left-20 -bottom-16 absolute">
+        <div class="absolute">
+          <p class="relative right-2 font-bold mt-2">Blouse </p>
+          <p class="relative right-2">$12.00 </p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+<!--  main part 2-->
+  <div class="flex flex-col items-center sm:flex-row sm:justify-between p-10">
+    <div>
+      <div>
+        <img src="assets/images/boy.png" alt="">
+
+      </div>
+    </div>
+    <div class="flex flex-col justify-center items-center my-16">
+      <div class="flex space-x-6 mb-16">
+        <button class="px-6 py-1 rounded-md bg-orange-500 text-white text-xl">shop now </button>
+        <button class="px-6 py-1 rounded-md bg-white border-2 border-orange-500 text-orange-500 text-xl">flash sale </button>
+      </div>
+      <button class=" border-2 border-black h-24 w-52 rounded-full font-bold text-3xl">
+        sitewide <br>
+       sale
+      </button>
+
+    </div>
+    <div>
+      <img class="h-96" src="assets/images/girl.png" alt="">
+    </div>
+  </div>
+  <div class="py-4 px-8">
+  </div>
+</div>
