Design popular-item component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,7 @@
       <img class="h-96" src="assets/images/girl.png" alt="">
     </div>
   </div>
-  <div class="py-4 px-8">
+  <div class="py-4 px-8 bg-gray-50  ">
+    <app-popular-item></app-popular-item>
   </div>
 </div>
