Design product-card component

--- a/src/app/home/popular-item/popular-item.component.html
+++ b/src/app/home/popular-item/popular-item.component.html
@@ -18,6 +18,8 @@
     <div class=" flex space-x-6 snap-center">
 
       <!--     product cards goes here -->
+      <app-product-card></app-product-card>
+      <app-product-card></app-product-card>
 
     </div>
   </div>
