Design popular-item component second-time

--- a/src/app/home/popular-item/popular-item.component.html
+++ b/src/app/home/popular-item/popular-item.component.html
@@ -23,5 +23,23 @@
 
     </div>
   </div>
+  <div class="  flex justify-between py-16 ">
+
+    <div>
+      <h2 class="text-4xl mb-4 font-semibold">
+        WHERE PERSONALITY <br> MEETS FABRIC
+      </h2>
+      <p>
+        Personal style in fashion is more than just what you wear—it's a visual <br>
+        manifestation of your personality. It's the art of curating outfits that  <br>
+        resonate with your inner essence
+      </p>
+    </div>
+
+    <div>
+      <img class="px-16" src="assets/images/girl%202.png" alt="">
+    </div>
+
+  </div>
 
 </div>
