Design new-arrival component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,4 +55,7 @@
   <div class="py-4 px-8 bg-gray-50  ">
     <app-popular-item></app-popular-item>
   </div>
+  <div class="py-4 px-8 bg-white  ">
+    <app-new-arrivals></app-new-arrivals>
+  </div>
 </div>
