Fix some responsive issues in popular-item component

--- a/src/app/home/popular-item/popular-item.component.html
+++ b/src/app/home/popular-item/popular-item.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="flex justify-between">
-    <h2 class="font-bold text-xl mb-8">POPULAR ITEMS</h2>
+    <h2 class="font-bold text-xl mb-8">NEW ARRIVALS</h2>
     <div class="sm:flex space-x-3" hidden >
       <div class="rounded-full bg-orange-500 w-8 h-8 flex justify-center items-center text-white">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -23,22 +23,21 @@
 
     </div>
   </div>
-  <div class="  flex justify-between py-16 ">
+  <div class="  flex flex-col-reverse sm:flex-row  sm:py-16 justify-between items-center mt-16">
 
-    <div>
+
+    <div class="sm:mr-56 whitespace-normal overflow-auto  sm:w-96">
       <h2 class="text-4xl mb-4 font-semibold">
-        WHERE PERSONALITY <br> MEETS FABRIC
+        WHERE PERSONALITY MEETS FABRIC
       </h2>
-      <p>
-        Personal style in fashion is more than just what you wear—it's a visual <br>
-        manifestation of your personality. It's the art of curating outfits that  <br>
-        resonate with your inner essence
+      <p class="whitespace-normal overflow-hidden  text-xl">
+        Personal style in fashion is more than just what you wear—it's a visual manifestation of your personality. It's the art of curating outfits that resonate with your inner essence.
       </p>
     </div>
-
     <div>
-      <img class="px-16" src="assets/images/girl%202.png" alt="">
+      <img class=" sm:px-24 mt-16 px-16" src="assets/images/girl%202.png" alt="">
     </div>
+
 
   </div>
 
