Design follow-us component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,4 +58,7 @@
   <div class="py-4 px-8 bg-white  ">
     <app-new-arrivals></app-new-arrivals>
   </div>
+  <div class="py-4 px-8 bg-white  ">
+    <app-follow-us></app-follow-us>
+  </div>
 </div>
