--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="p-4">
-      <app-cart-detail ></app-cart-detail>
+<!--      <app-cart-detail ></app-cart-detail>-->
       <app-favorate-detail></app-favorate-detail>
     </div>
   </div>
