--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -39,7 +39,7 @@
 
       </div>
       <div class="w-full md:w-2/5 ">
-<!--        <app-order></app-order>-->
+        <app-order></app-order>
 
       </div>
     </div>
