Design checkout(order-card) component

--- a/src/app/checkout/order/order.component.html
+++ b/src/app/checkout/order/order.component.html
@@ -3,7 +3,8 @@
    <div>
      <p class="text-2xl">your order </p>
    </div >
-   <div>
+   <div class="mb-6">
+     <app-order-card></app-order-card>
      <app-order-card></app-order-card>
    </div>
    <div>
