--- a/src/app/checkout/order/order-card/order-card.component.html
+++ b/src/app/checkout/order/order-card/order-card.component.html
@@ -1,1 +1,22 @@
-<p>order-cart works!</p>
+<div class=" border-b border-b-gray-300 md:px-4 md:py-6 px-0 py-2">
+  <div class="flex justify-between">
+    <!--  left-->
+    <div class="flex">
+      <!--    image-->
+      <div class="flex items-center justify-center">
+        <img class="h-16 md:h-24" alt="" src="assets/images/teshirty.png">
+      </div>
+      <!--    detail-->
+      <div>
+        <p class="font-bold text-lg">name</p>
+        <p class="text-gray-500">size</p>
+        <p class="text-gray-500">3 psc</p>
+
+      </div>
+    </div>
+    <!--  right-->
+    <div>
+      <p class="font-bold text-lg">$ 12.00</p>
+    </div>
+  </div>
+</div>
