--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,27 +1,19 @@
-<div class="p-5">
+<div class="p-5 mb-4">
     <!--breadcrumb -->
-  <div class="pb-8">
+  <div class="pb-4 md:pb-8">
     <nav class="flex" >
-      <ol class="inline-flex items-center space-x-1 md:space-x-3">
-        <li class="inline-flex items-center">
-          <a href="#" class="inline-flex items-center text-lg font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+      <ol class="flex items-center justify-center ">
+        <li class="mr-2">
+          <a [routerLink]="['/']" class="text-gray-600 font-bold">
             Home
           </a>
         </li>
         <li>
-          <div class="flex items-center">
-            <svg class="w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          <div class="flex justify-center items-center  ">
+            <svg class="w-4  h-4 mt-1 text-gray-400 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor" >
+              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
             </svg>
-            <a href="#" class="ml-1 text-lgsm font-medium text-gray-700 hover:text-blue-600 md:ml-2 dark:text-gray-400 dark:hover:text-white">product</a>
-          </div>
-        </li>
-        <li aria-current="page">
-          <div class="flex items-center">
-            <svg class="w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-            </svg>
-            <span class="ml-1 text-lg font-medium text-gray-500 md:ml-2 dark:text-gray-400">tshirt</span>
+            <a [routerLink]="['/products']" class=" text-gray-400 font-semibold mr-2">product</a>
           </div>
         </li>
       </ol>
@@ -85,15 +77,15 @@
 
     </div>
     <!--contents-->
-    <div class="sm:ml-6">
+    <div class="md:ml-4 mb-6">
       <!--fillterd detaile-->
-      <div class="mb-6">
-        <p>Showing 9 results from total 50 for “shirts”</p>
+      <div class="mb-6 ">
+        <p>Showing <span class="font-semibold">"9"</span> results from total <span class="font-semibold">"50"</span> for “shirts”</p>
       </div>
       <!--applied fillter-->
-      <div class="flex flex-col space-y-2 mb-8 sm:flex-row sm:justify-start sm:items-center sm:space-x-8">
+      <div class="mb-6 flex flex-col space-y-2 space-x-0 sm:space-y-0  sm:space-x-6  sm:flex-row sm:justify-start sm:items-center ">
         <p>Applied Filters:</p>
-        <div class="shadow rounded-full border w-28 h-12 flex justify-between items-center p-3">
+        <div class="shadow rounded-full border p-3  w-28 h-10 flex justify-between items-center hover:bg-orange-200 ">
           <p>Men</p>
           <button>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -101,7 +93,7 @@
             </svg>
           </button>
         </div>
-        <div class="shadow rounded-full border w-28 h-12 flex justify-between items-center p-3">
+        <div class="shadow rounded-full border p-3  w-28 h-10 flex justify-between items-center hover:bg-orange-200 ">
           <p>T-shirts</p>
           <button>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -112,54 +104,57 @@
 
       </div>
       <!--products-->
-      <div class="mb-8 flex flex-col gap-4  items-center justify-center sm:flex-row  sm:flex-wrap">
-            <app-product-card></app-product-card>
-            <app-product-card></app-product-card>
+      <div class="flex flex-col justify-between ">
+           <div class="mb-8 flex flex-col gap-4  items-center justify-center sm:flex-row  sm:flex-wrap">
+             <app-product-card></app-product-card>
+             <app-product-card></app-product-card>
+             <app-product-card></app-product-card>
+             <app-product-card></app-product-card>
+             <app-product-card></app-product-card>
+           </div>
+        <!--tabs-->
+        <div class="flex justify-center items-center">
+
+          <nav>
+            <ul class="flex items-center -space-x-px h-10 text-base">
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 ml-0 leading-tight text-white bg-orange-500 border border-gray-300 rounded-l-lg hover:bg-orange-600 hover:text-gray-200">
+                  <span class="sr-only">Previous</span>
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">1</a>
+              </li>
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">2</a>
+              </li>
+              <li>
+                <a href="#" aria-current="page" class="z-10 flex items-center justify-center px-4 h-10 leading-tight text-white border border-blue-300 bg-orange-500 hover:bg-orange-600 hover:text-gray-200">3</a>
+              </li>
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">4</a>
+              </li>
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">5</a>
+              </li>
+              <li>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 rounded-r-lg hover:bg-orange-600 hover:text-gray-200">
+                  <span class="sr-only">Next</span>
+                  <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </nav>
 
 
+        </div>
       </div>
     </div>
-  </div>
-    <!--tabs-->
-  <div class="flex justify-center items-center">
-
-    <nav>
-      <ul class="flex items-center -space-x-px h-10 text-base">
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 ml-0 leading-tight text-white bg-orange-500 border border-gray-300 rounded-l-lg hover:bg-orange-600 hover:text-gray-200">
-            <span class="sr-only">Previous</span>
-            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">1</a>
-        </li>
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">2</a>
-        </li>
-        <li>
-          <a href="#" aria-current="page" class="z-10 flex items-center justify-center px-4 h-10 leading-tight text-white border border-blue-300 bg-orange-500 hover:bg-orange-600 hover:text-gray-200">3</a>
-        </li>
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">4</a>
-        </li>
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 hover:bg-orange-600 hover:text-gray-200">5</a>
-        </li>
-        <li>
-          <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-white bg-orange-500 border border-gray-300 rounded-r-lg hover:bg-orange-600 hover:text-gray-200">
-            <span class="sr-only">Next</span>
-            <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </nav>
-
-
   </div>
 </div>
 
